=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.15_01-dev

use 1.3.2-dev+'s ap_custom_response() when possible

remove Apache::DESTROY method (was only for avoiding old AutoLoader bug)

Apache::exit fixed under Apache::PerlRun

fix chdir_file() call in Apache::Registry so we go back to the original
directory [Gerald Richter <richter@ecos.de>]

added :override :args_how tags to Apache::Constants

add DIR_MAGIC_TYPE to perl_handlers[] table for directory indexing
modules

Apache::Log optimizations/enhancements:
  $r->log now invokes ap_log_rerror (w/ 1.3.2-dev+)
  ${r,s}->log->$method() will now accept a CODE ref as it's first
  argument, which is only called when LogLevel >= $method
  caller() file/line info determined only if LogLevel >= debug
  avoid copy of message SV 
  log() method and aliases now in xs

tweak Apache->module so it can test for configured .c modules

pushing out experimental stuff:
  EXPERIMENTAL=1 (enables all experiments, except PERL_DEFAULT_OPMASK)
  PERL_GET_SET_HANDLERS=1 if PERL_STACKED_HANDLERS
  PERL_MARK_WHERE=1, PERL_TIE_SCRIPTNAME=1 if PERL_TRACE
  PERL_SECTIONS_SELF_BOOT=1 if PERL_SECTIONS

new $r->server->next method

removed use of Term::ReadLine in Makefile.PL to make it work on
systems with broken Term::ReadLines installed. 
[Ask Bjoern Hansen <ask@netcetera.dk>]

fix Makefile.PL and Apache::src to find MODULE_MAGIC_NUMBER in ap_mmn.h

if PERL_DESTRUCT_LEVEL < 0, skip perl_destruct(), etc. in perl_shutdown()

add CLOSE method for tied *STD{OUT,IN}

add config for mod_ssl and 'make test' [Lupe Christoph <lupe@alanya.m.isar.de>]

PerlInitHandler is now aliased to PerlPostReadRequestHandler when
configured a the "top-level", that is, not within any Location,
Directory or Files, where it is still aliased to
PerlHeaderParserHandler
 
PerlCleanupHandler is now run by a register_cleanup(), rather than an
alias for PerlLogHandler 
