@@ -7,8 +7,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - make DYNAMIC=1 work again
 
-- change as_string to use table->do
-
 - sfio/solaris problem
 Lupe Christoph <lupe@alanya.m.isar.de>, Don Hayward <don@mote.org>
 
